--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile "com.google.protobuf:protobuf-java:3.6.1"
     compile "io.grpc:grpc-all:1.19.0"
     compile "javax.annotation:javax.annotation-api:1.2"
+    compile "ch.qos.logback:logback-classic:1.2.3"
 }
 
 sourceSets {
